--- a/Life Counter/Life Counter/PlayerViewController.xib
+++ b/Life Counter/Life Counter/PlayerViewController.xib
@@ -10,9 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerView" customModule="Life_Counter" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="8dZ-qp-Vad">
+        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dZ-qp-Vad">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="124" id="Ofv-w2-LOT">
                     <rect key="frame" x="32" y="44" width="362" height="110"/>
@@ -53,7 +52,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="heH-Iy-SJi">
-                                            <rect key="frame" x="0.0" y="55" width="35" height="55"/>
+                                            <rect key="frame" x="0.0" y="55" width="33" height="55"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
